# soroban-guard-contracts

./: Cargo.toml  README.md
components/: ScanInput.tsx
docs/: vulnerabilities.md
lib/: api.test.ts  api.ts  notifications.ts
registry/: Cargo.toml
registry/src/: lib.rs
secure/protected_admin/: Cargo.toml
secure/protected_fee_withdraw/: Cargo.toml
secure/secure_airdrop/: Cargo.toml
secure/secure_burn/: Cargo.toml
secure/secure_escrow/: Cargo.toml
secure/secure_lending/: Cargo.toml
secure/secure_pausable/: Cargo.toml
secure/secure_token/: Cargo.toml
secure/secure_vault/: Cargo.toml
secure/secure_vesting/: Cargo.toml
vulnerable/abs_min_overflow/: Cargo.toml
vulnerable/accept_admin_missing_auth/: Cargo.toml  README.md
vulnerable/accept_admin_missing_auth/src/: lib.rs  secure.rs
vulnerable/admin_rugpull/: Cargo.toml
vulnerable/admin_rugpull/src/: lib.rs
vulnerable/admin_skim_donations/: Cargo.toml
vulnerable/admin_timelock_rewrite/: Cargo.toml
vulnerable/admin_timelock_rewrite/src/: lib.rs  secure.rs
vulnerable/airdrop_campaign_collision/: Cargo.toml
vulnerable/airdrop_campaign_collision/src/: lib.rs  secure.rs
vulnerable/airdrop_claim_before_start/: Cargo.toml
vulnerable/airdrop_claim_before_start/src/: lib.rs  secure.rs
vulnerable/airdrop_expiry_ignored/: Cargo.toml
vulnerable/airdrop_expiry_ignored/src/: lib.rs  secure.rs
vulnerable/allowance_not_decremented/: Cargo.toml
vulnerable/balance_key_missing_user/: Cargo.toml
vulnerable/batch_partial_failure/: Cargo.toml
vulnerable/batch_partial_failure/src/: lib.rs  secure.rs
vulnerable/batch_pause_bypass/: Cargo.toml
vulnerable/batch_pause_bypass/src/: lib.rs  secure.rs
vulnerable/borrow_cap_asset_mixup/: Cargo.toml
vulnerable/borrow_cap_asset_mixup/src/: lib.rs  secure.rs
vulnerable/bridge_chainid_missing/: Cargo.toml
vulnerable/bridge_chainid_missing/src/: lib.rs  secure.rs
vulnerable/bridge_nonce_global/: Cargo.toml
vulnerable/bridge_validator_quorum_missing/: Cargo.toml
vulnerable/call_depth/: Cargo.toml
vulnerable/caller_supplied_ledger/: Cargo.toml  README.md
vulnerable/caller_supplied_ledger/src/: lib.rs  secure.rs
vulnerable/caller_supplied_withdraw_token/: Cargo.toml
vulnerable/canceled_listing_fillable/: Cargo.toml
vulnerable/canceled_listing_fillable/src/: lib.rs  secure.rs
vulnerable/collateral_factor_over_100/: Cargo.toml
vulnerable/collateral_factor_over_100/src/: lib.rs  secure.rs
vulnerable/collateral_withdraw_no_health_check/: Cargo.toml
vulnerable/collateral_withdraw_no_health_check/src/: lib.rs  secure.rs
vulnerable/delegate_signer_mismatch/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/delegation_weight_no_snapshot/: Cargo.toml
vulnerable/delegation_weight_no_snapshot/src/: lib.rs  secure.rs
vulnerable/delete_without_tombstone/: Cargo.toml
vulnerable/delete_without_tombstone/src/: lib.rs  secure.rs
vulnerable/div_by_zero/: Cargo.toml
vulnerable/double_claim/: Cargo.toml
vulnerable/dust_griefing/: Cargo.toml
vulnerable/emergency_delay_bypass/: Cargo.toml
vulnerable/epoch_claim_no_advance/: Cargo.toml
vulnerable/epoch_claim_no_advance/src/: lib.rs  secure.rs
vulnerable/execute_without_queue/: Cargo.toml
vulnerable/expired_delegation/: Cargo.toml
vulnerable/fake_token_registration/: Cargo.toml  README.md
vulnerable/fake_token_registration/src/: lib.rs  secure.rs
vulnerable/fee_on_transfer/: Cargo.toml
vulnerable/flash_loan_no_check/: Cargo.toml
vulnerable/flash_repay_wrong_token/: Cargo.toml
vulnerable/flash_repay_wrong_token/src/: lib.rs  secure.rs
vulnerable/future_oracle_timestamp/: Cargo.toml
vulnerable/future_oracle_timestamp/src/: lib.rs  oracle.rs  secure.rs
vulnerable/inactive_circuit_breaker/: Cargo.toml
vulnerable/inactive_circuit_breaker/src/: lib.rs  secure.rs
vulnerable/incomplete_blacklist/: Cargo.toml
vulnerable/instant_oracle/: Cargo.toml
vulnerable/instant_oracle/src/: lib.rs
vulnerable/key_collision/: Cargo.toml
vulnerable/leaky_events/: Cargo.toml
vulnerable/leaky_events/src/: lib.rs
vulnerable/liquidation_dust_rounding/: Cargo.toml
vulnerable/liquidation_dust_rounding/src/: lib.rs  secure.rs
vulnerable/merkle_duplicate_siblings/: Cargo.toml
vulnerable/merkle_duplicate_siblings/src/: lib.rs  secure.rs
vulnerable/merkle_leaf_missing_amount/: Cargo.toml  README.md
vulnerable/merkle_leaf_missing_amount/src/: lib.rs  secure.rs
vulnerable/missing_auth/: Cargo.toml
vulnerable/missing_escrow_auth/: Cargo.toml
vulnerable/missing_events/: Cargo.toml
vulnerable/missing_ttl/: Cargo.toml
vulnerable/missing_ttl/src/: lib.rs
vulnerable/mixed_collateral_decimals/: Cargo.toml
vulnerable/near_overflow_input/: Cargo.toml
vulnerable/negative_oracle_price/: Cargo.toml
vulnerable/negative_oracle_price/src/: lib.rs  secure.rs
vulnerable/negative_transfer/: Cargo.toml
vulnerable/nft_operator_collection_mixup/: Cargo.toml
vulnerable/no_min_stake/: Cargo.toml
vulnerable/no_min_stake/src/: lib.rs
vulnerable/no_slippage/: Cargo.toml
vulnerable/no_slippage/src/: lib.rs
vulnerable/nonzero_allowance_overwrite/: Cargo.toml  PR_DESCRIPTION.md  README.md
vulnerable/operator_role_not_enforced/: Cargo.toml  PR_DESCRIPTION.md
vulnerable/oracle_confidence_ignored/: Cargo.toml
vulnerable/oracle_price_scale_mismatch/: Cargo.toml
vulnerable/oracle_source_unwhitelisted/: Cargo.toml
vulnerable/partial_config_clear/: Cargo.toml
vulnerable/permit_deadline_ignored/: Cargo.toml
vulnerable/permit_domain_missing/: Cargo.toml
vulnerable/public_role_grant/: Cargo.toml
vulnerable/public_token_sweep/: Cargo.toml  README.md
vulnerable/quorum_current_supply/: Cargo.toml
vulnerable/rebasing_token_accounting/: Cargo.toml
vulnerable/recursive_hook_depth/: Cargo.toml
vulnerable/redundant_admin_set/: Cargo.toml
vulnerable/reentrancy/: Cargo.toml
vulnerable/reinit_attack/: Cargo.toml
vulnerable/repay_for_reward_grief/: Cargo.toml
vulnerable/replay_attack/: Cargo.toml
vulnerable/report_hash_unbound_contract/: Cargo.toml
(+258 files in other folders)
