[package]
name = "accept-admin-missing-auth"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating accept_admin missing pending admin auth"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
