[workspace]

[package]
name = "airdrop-campaign-collision"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban airdrop that keys claimed storage only by claimant address"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
