[package]
name = "airdrop-claim-before-start"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: airdrop claim ignores campaign start_ledger"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
