[workspace]

[package]
name = "borrow-cap-asset-mixup"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban lending where borrow cap is global, not per-asset"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
