[package]
name = "canceled-listing-fillable"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating canceled listing remaining fillable via stale order key"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
