[package]
name = "collateral-factor-over-100"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban lending fixture demonstrating collateral factors above 100%."
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
