[package]
name = "delegation_weight_no_snapshot"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban governance contract with unsnapshot delegated voting weight"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
