[package]
name = "fake-token-registration"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating fake token registration with untrusted metadata"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
