[package]
name = "future-oracle-timestamp"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating future oracle timestamp extending price validity"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
