[package]
name = "instant-oracle"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating instant/manipulable oracle price reads"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
