[package]
name = "leaky-events"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract demonstrating sensitive data leaked via events"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
