[workspace]

[package]
name = "merkle-duplicate-siblings"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban Merkle verifier that accepts malformed proofs with duplicate siblings"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
