[package]
name = "negative-oracle-price"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban contract: negative signed oracle price cast to unsigned collateral value — wraps to huge amount"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
