[package]
name = "no-slippage"
version = "0.1.0"
edition = "2021"
description = "Vulnerable Soroban AMM contract with no slippage protection"
license = "MIT"
repository = "https://github.com/Veritas-Vaults-Network/soroban-guard-contracts"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
